LOADUI-823 Changed a condition that caused all systems to check fonts at least once. Fixed The Restart-dialog that was not getting the executable due to the use of processbuilder